<resources>
    <string name="app_name">Road help</string>
    <string name="hello">Hello</string>
    <string name="hello_user">Hello User</string>
    <string name="user_login">User login</string>
    <string name="user_registration">User_Registration</string>
    <string name="admin_login">Admin login</string>
    <string name="business_ownner_login">Business_ownner login</string>
    <string name="help_desk">Help Desk</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="settings">Settings</string>
    <string name="favourite">Favourite</string>
    <string name="user_regestration">User Regestration</string>
    <string name="admin_login0">Admin login</string>
    <string name="admin_login00">Admin login</string>
    <string name="admin_ogin">Admin login</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="name">Name</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="vehicle_no">Vehicle No.</string>
    <string name="submit_request">Submit Request</string>
    <string name="request_a_service">Request a Service</string>
    <string name="dummy">If you have any problem on roadside about your vehicle then is application is very help ful.If you need any help ,simply go through help desk here.</string>
    <string name="search_elements">Search elements</string>
    <string name="user_login_1">User login</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="h">Vehicle Type</string>
    <string name="enter_your_location">Enter Your Location</string>
    <string name="vehicle_number">Vehicle Number</string>
</resources>